--- a/src/main/resources/archetype-resources/pom.xml
+++ b/src/main/resources/archetype-resources/pom.xml
@@ -23,7 +23,7 @@
         </dependency>
 
         <dependency>
-            <groupId>cs.mds.utils</groupId>
+            <groupId>grinder-scala</groupId>
             <artifactId>grinder-scala</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
