--- a/src/main/resources/archetype-resources/pom.xml
+++ b/src/main/resources/archetype-resources/pom.xml
@@ -25,7 +25,7 @@
         <dependency>
             <groupId>grinder-scala</groupId>
             <artifactId>grinder-scala</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.0-SNAPSHOT_${scala.version}</version>
         </dependency>
 
         <dependency>
